Fix BIG getting cut off

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2 {
   font-family: 'Staatliches', sans-serif;
   font-weight: bold;
   font-size: 8rem;
-  margin: 120px 0;
+  margin: 60px 0;
   background-position: center;
   background-size: 100vw 100vh;
   background-image: url("andromeda.jpg");
@@ -21,7 +21,7 @@ h2 {
   background-clip: text;
   -webkit-background-clip: text;
   line-height: 120px !important;
-  padding: 0;
+  padding: 30px;
   text-align: center;
 }
 
